# algorithms_data_structures

./: CMakeLists.txt  LICENSE  README.md
Chapter_15/: CMakeLists.txt  cut_stick.cpp  matrix_multiplication.cpp  matrix_ordering.cpp
Chapter_2/: 2.3-7.cpp  anti_orderings.cpp  insertion_sort.cpp  merge_sort.cpp  mergesort.cpp  my_functions.h
Chapter_31/: 31.2-4.cpp  31.2-8.cpp  CMakeLists.txt  euclid.cpp  euclid.h
graphs/Chapter_21/: adj_list.cpp  adj_list.h  main.cpp
random/: CMakeLists.txt  random_data.cpp
